# rust-commons

./: .gitlab-ci.yml  .licenserc.yaml  .pre-commit-config.yaml  CHANGELOG-0.1.2.adoc  CHANGELOG-0.1.2.md  CHANGELOG.adoc  Cargo.toml  LICENSE  README.adoc  cliff.toml  renovate.json
.github/workflows/: rust.yml
src/: lib.rs
src/durations/: mod.rs
