[package]
name = "rust-commons"
version = "0.1.2"
edition = "2021"
license = "GPL-3.0-or-later"
description = "Common code for Rust"
authors = ["Dirk Strauss <cpv5fhsq9@mozmail.com>"]
readme = "README.adoc"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"], optional = true }
thiserror = "2.0.3"
tracing = "0.1.40"

[dev-dependencies]
pretty_assertions = "1.4.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
debug = 1

[features]
durations = ["chrono/serde"]
